changes suggested by mam ,footer changes

--- a/project.html
+++ b/project.html
@@ -148,7 +148,6 @@
                           <h4>Combinatorial Multi-armed Bandit Mechanisms</h4>
                           <p>MATRICS has awarded a research project titled 'Characterizing and Designing Combinatorial Multi-armed Bandit Mechanisms.' The project explores innovative approaches to optimize decision-making processes with applications in diverse fields.</p>
                           <p style="margin-top: -20px;"><b>PI: Dr. Shweta Jain</b></p>
-                          <p style="margin-top: -20px;"><b>Co-PI: Ganesh Ghalme (IIT Hyderabad), Surjit Gujjar (IIIT Hyderabad)</b></p>
                         </div>
                   </div>
                   <div class="col-md-6">
@@ -156,8 +155,8 @@
                           <img src="./images/Projects/project.png"   width="100" height="100">
                           <h4>Learning in Dynamic and Strategic Environments</h4>
                           <p>The Core Research Grant (CRG) has funded the research project 'Strategic Learning: Understanding Decision-Making with Strategic Agents.' This study investigates decision-making processes in scenarios with strategic actors who manipulate their feature space to get most favorable machine learning outcomes, providing valuable insights applicable across various domains.</p>
-                          <p style="margin-top: -20px;"><b>PI: Dr. Shweta Jain</b></p>
-                          <p style="margin-top: -20px;"><b>Co-PI: Ganesh Ghalme (IIT Hyderabad), Surjit Gujjar (IIIT Hyderabad)</b></p>
+                          <p style="margin-top: -20px;"><b>PI: Dr. Ganesh Ghalme</b></p>
+                          <p style="margin-top: -20px;"><b>Co-PI: Dr. Shweta Jain</b></p>
                       </div>
                     </div>
                     <div class="col-md-6">
@@ -165,8 +164,17 @@
                           <img src="./images/Projects/project.png"   width="100" height="100">
                           <h4>Fair Federated Learning</h4>
                           <p>The Core Research Grant (CRG) has granted funding to the project "Advancing Fairness in Federated Learning Models." This research aims to improve fairness within federated learning, making a significant contribution to equitable and ethical AI.</p>
+                          <p style="margin-top: -20px;"><b>PI: Dr. Sujit Gujar</b></p>
+                          <p style="margin-top: -20px;"><b>Co-PI: Dr. Shweta Jain</b></p>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="srv-col">
+                          <img src="./images/Projects/project.png"   width="100" height="100">
+                          <h4>Huma-in-th-loop</h4>
+                          <p>Human-in-the-loop projects leverage the synergy between human intelligence and automated systems to enhance decision-making, problem-solving, and overall efficiency.</p>
                           <p style="margin-top: -20px;"><b>PI: Dr. Shweta Jain</b></p>
-                          <p style="margin-top: -20px;"><b>Co-PI: Ganesh Ghalme (IIT Hyderabad), Surjit Gujjar (IIIT Hyderabad)</b></p>
+                          <p style="margin-top: -20px;"><b>Co-PI: Dr. Shashi Shekhar Jha</b></p>
                       </div>
                     </div>
               </div>
@@ -229,9 +237,14 @@
                   <a href="https://www.linkedin.com/company/game-theory-and-machine-learning-lab/" class="pl-3 pr-3" target="_blank"><span class="icon-linkedin"></span></a>
                 <br>
                   <br>
-                  <a class="mb-0 site-logo "><img class="new_logo_des" src="images/logo/Logo_white_background.png" id="header-logo" class="img-fluid" height="125px" width="165px" style="border: 4px solid #000000;"></a>
+                  <a class="mb-0 site-logo "><img class="new_logo_des" src="./images/logo/logo_footer.png" id="header-logo" class="img-fluid" height="125px" width="165px" style="border: 4px solid #000000;"></a>
                 </div>
               </div>
+              <center>
+                <p>
+                    <small>&copy; Copyright ©2023 All rights reserved by GTML Lab</small>
+                </p>
+              </center>
         </div>
       </footer>
 
