--- a/gallery.html
+++ b/gallery.html
@@ -267,9 +267,14 @@ closeBtn.addEventListener('click', () => {
                 <a href="https://www.linkedin.com/company/game-theory-and-machine-learning-lab/" class="pl-3 pr-3" target="_blank"><span class="icon-linkedin"></span></a>
               <br>
                 <br>
-                <a class="mb-0 site-logo "><img class="new_logo_des" src="images/logo/Logo_white_background.png" id="header-logo" class="img-fluid" height="125px" width="165px" style="border: 4px solid #000000;"></a>
+                <a class="mb-0 site-logo "><img class="new_logo_des" src="./images/logo/logo_footer.png" id="header-logo" class="img-fluid" height="125px" width="165px" style="border: 4px solid #000000;"></a>
               </div>
             </div>
+            <center>
+              <p>
+                  <small>&copy; Copyright ©2023 All rights reserved by GTML Lab</small>
+              </p>
+            </center>
       </div>
     </footer>
   </div> 
