--- a/team.html
+++ b/team.html
@@ -216,7 +216,7 @@
                         <div class="person text-center extra_profile_space" id="deep-dwivedi">
                              <img  src="./images/dp/phd_napender_singh.jpeg" alt="Image" style="height: 250px;"class="img-fluid rounded w-50 ">
                                     <h3><strong>Napendra Singh Rajput</strong></h3>
-                                    <p class="text-black">Fair Trip Planning</p>
+                                    <p class="text-black">Computational Social Choice</p>
                                 <ul class="ul-social-circle">
                                     <li><a href="https://www.linkedin.com/in/napendra-singh-rajput-782872143/"><span
                                                 class="icon-linkedin" style="font-size:20px"></span></a></li>
@@ -683,9 +683,14 @@
                       <a href="https://www.linkedin.com/company/game-theory-and-machine-learning-lab/" class="pl-3 pr-3" target="_blank"><span class="icon-linkedin"></span></a>
                     <br>
                       <br>
-                      <a class="mb-0 site-logo "><img class="new_logo_des" src="images/logo/Logo_white_background.png" id="header-logo" class="img-fluid" height="125px" width="165px" style="border: 4px solid #000000;"></a>
+                      <a class="mb-0 site-logo "><img class="new_logo_des" src="./images/logo/logo_footer.png" id="header-logo" class="img-fluid" height="125px" width="165px" style="border: 4px solid #000000;"></a>
                     </div>
                   </div>
+                  <center>
+                    <p>
+                        <small>&copy; Copyright ©2023 All rights reserved by GTML Lab</small>
+                    </p>
+                  </center>
             </div>
           </footer>
 
