--- a/team.html
+++ b/team.html
@@ -230,7 +230,7 @@
 
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
                         <div class="person text-center extra_profile_space" id="deep-dwivedi">
-                             <img  src="./images/dp/phd_shubham_phokhriyal_formal1.jpg" alt="Image" style="height: 250px;"class="img-fluid rounded w-50 ">
+                             <img  src="./images/dp/phd_shubham_phokhriyal_formal1.jpeg" alt="Image" style="height: 250px;"class="img-fluid rounded w-50 ">
                                     <h3><strong>Subham Pokrhiyal</strong></h3>
                                     <p class="text-black">Fairness in Multi-armed Bandits</p>
                                 <ul class="ul-social-circle">
