--- a/team.html
+++ b/team.html
@@ -279,7 +279,7 @@
                 <div class="row">
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
                         <div class="person text-center extra_profile_space" id="deep-dwivedi">
-                            <!-- <img  src="./images/dp/phd_shivam_gupta.jpg" alt="Image" style="height: 250px;"class="img-fluid rounded w-50 ">-->
+                             <img  src="./images/dp/sampa.jpg" alt="Image" style="height: 250px;"class="img-fluid rounded w-50 ">
                                     <h3><strong>Sampa Mondal</strong></h3>
                                     <p class="text-black">Strategic Classification</p>
                                 <!--<ul class="ul-social-circle">
