--- a/research.html
+++ b/research.html
@@ -88,7 +88,7 @@
                           <li class="has-children">
                               <a href="team.html" class="nav-link">Our Team</a>
                               <ul class="dropdown">
-                                  <li><a href="team.html#director-section">Dr Shweta Jain</a></li>
+                                  <li><a href="team.html#director-section">Faculty</a></li>
                                   <li><a href="team.html#members-section">Phds</a></li>
                                   <li><a href="team.html#mtech-section">Mtech</a></li>
                                   <li><a href="team.html#btech-section">Btech</a></li>
