--- a/project.html
+++ b/project.html
@@ -86,7 +86,7 @@
                           <li class="has-children">
                               <a href="team.html" class="nav-link">Our Team</a>
                               <ul class="dropdown">
-                                <li><a href="team.html#director-section">Dr Shweta Jain</a></li>
+                                <li><a href="team.html#director-section">Faculty</a></li>
                                 <li><a href="team.html#members-section">Ph.D</a></li>
                                 <li><a href="team.html#mtech-section">M.Tech</a></li>
                                 <li><a href="team.html#btech-section">B.tech</a></li>
@@ -171,7 +171,7 @@
                     <div class="col-md-6">
                       <div class="srv-col">
                           <img src="./images/Projects/project.png"   width="100" height="100">
-                          <h4>Huma-in-th-loop</h4>
+                          <h4>Human-in-the-loop</h4>
                           <p>Human-in-the-loop projects leverage the synergy between human intelligence and automated systems to enhance decision-making, problem-solving, and overall efficiency.</p>
                           <p style="margin-top: -20px;"><b>PI: Dr. Shweta Jain</b></p>
                           <p style="margin-top: -20px;"><b>Co-PI: Dr. Shashi Shekhar Jha</b></p>
