--- a/index.html
+++ b/index.html
@@ -208,33 +208,46 @@
 
 
 
-                    <div class="p-3 box-with-humber ">
-                        <!-- <div class="number-behind">02.</div> -->
-                        <h2 class="text-primary">Recent News</h2>
+                    <div class="p-3 box-with-humber">
+    <h2 class="text-primary">Recent News</h2>
+    <ul style="text-align: justify;">
+        <li>
+            Shivam Gupta (Advised by Dr. Shweta Jain) has <strong>successfully defended his Ph.D. thesis</strong>. Congratulations Dr. Gupta!
+        </li>
+        <li>
+            Greeshma Panathale has been selected for the
+            <strong>prestigious ACM India Anveshan Setu Fellowship</strong>, among just 50 Ph.D. students
+            chosen from across the country. Congratulations Greeshma!
+        </li>
+        <li>
+            Dr. Shweta Jain has received the
+            <strong>Google India Research Award 2024</strong> for her project on
+            <q>Fair Allocation of Resources via Multi-armed Bandit Algorithms</q>, in collaboration
+            with Prof. Nandyala Hemachandra.
+        </li>
+        <li>
+            <strong>Paper</strong> titled
+            <q>Anytime Fairness Guarantees in Stochastic Combinatorial MABs: A Novel Learning Framework</q>
+            by Subham Pokhriyal, Shweta Jain, Ganesh Ghalme, and
+            Vaneet Aggarwal has been <strong>accepted as a full paper in AAMAS 2025</strong>.
+        </li>
+        <li>
+            <strong>Paper</strong> titled
+            <q>FLIGHT: Facility Location Integrating Generalized, Holistic Theory of Welfare</q>
+            by Avyukta Manjunatha Vummintala, Shivam Gupta,
+            Shweta Jain, and Sujit Gujar has been <strong>accepted as a full paper in AAMAS 2025</strong>.
+        </li>
+        <li>
+            <strong>Paper</strong> titled
+            <q>Fair Assignment on Multi-Stage Graphs</q>
+            by Vibulan J, Swapnil Dhamal, Shweta Jain,
+            Ojassvi Kumar, Aman Kumar, and Harpreet Singh
+            has been <strong>accepted as an extended abstract in AAMAS 2025</strong>.
+        </li>
+    </ul>
+</div>
 
 
-                        <p class="mb-4" style="text-align: justify;"><b>Shivam Gupta (Advised by Dr. Shweta Jain) has
-                                successfully defended his Ph.D. thesis. Congratulations Dr. Gupta! </b></p>
-                        <p class="mb-4" style="text-align: justify;"><b>Greeshma Panathale has been selected for the
-                                prestigious ACM India Anveshan Setu Fellowship, among just 50 PhD students chosen from
-                                across the country. Congratulations Greeshma! </b></p>
-                        <p class="mb-4" style="text-align: justify;"><b>Paper titled "Anytime Fairness Guarantees in
-                                Stochastic Combinatorial MABs: A Novel Learning Framework" by Subham Pokhriyal, Shweta
-                                Jain, Ganesh Ghalme, and Vaneet Aggarwal accepted as full paper in AAMAS 2025.</b></p>
-                        <p class="mb-4" style="text-align: justify;"><b>Paper titled "FLIGHT: Facility Location
-                                Integrating Generalized, Holistic Theory of Welfare" by Avyukta Manjunatha Vummintala,
-                                Shivam Gupta, Shweta Jain, and Sujit Gujar accepted as full paper in AAMAS 2025.</b></p>
-                        <p class="mb-4" style="text-align: justify;"><b>Paper titled "Fair Assignment on Multi-Stage
-                                Graphs" by Vibulan J, Swapnil Dhamal, Shweta Jain, Ojassvi Kumar, Aman Kumar, and
-                                Harpreet Singh accepted as extended abstract in AAMAS 2025.</b></p>
-                        <p class="mb-4" style="text-align: justify;"><b>Dr. Shweta Jain has received the prestigious
-                                Google India Research Award 2024 for her project on "Fair Allocation of Resources via
-                                Multi-armed Bandit Algorithms," in collaboration with Prof. Nandyala Hemachandra </b>
-                        </p>
-
-
-
-                    </div>
 
 
 
