--- a/team.html
+++ b/team.html
@@ -349,8 +349,8 @@
                             <img src="./images/dp/phd_shivam_gupta.jpg" alt="Image" style="height: 250px;"
                                 class="img-fluid rounded w-75 ">
                             <h4><strong>Shivam Gupta</strong></h4>
-                            <h3>Fair Algorithm in Unsupervised Learning (2020-2025)</h3>
-                            <p class="text-black">Next Stop: Post-Doc. at IISC Banglore (under Dr. Siddharth Barman) </p>
+                            <h3>Fair Algorithms in Unsupervised Learning (2020-2025)</h3>
+                            <p class="text-black">Next Stop: Post-Doc. at IISC Bangalore (under Dr. Siddharth Barman) </p>
                             <ul class="ul-social-circle">
                                 <li><a href="https://www.linkedin.com/in/shivi98g/"><span class="icon-linkedin"
                                             style="font-size:20px"></span></a></li>
