--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
     <h2 class="text-primary">Recent News</h2>
     <ul style="text-align: justify;">
         <li>
-            Shivam Gupta (Advised by Dr. Shweta Jain) has <strong>successfully defended his Ph.D. thesis</strong>. Congratulations Dr. Gupta!
+            Shivam Gupta (Advised by Dr. Shweta Jain) has successfully <strong>defended his Ph.D. thesis</strong>. Congratulations Dr. Gupta!
         </li>
         <li>
             Greeshma Panathale has been selected for the
-            <strong>prestigious ACM India Anveshan Setu Fellowship</strong>, among just 50 Ph.D. students
+            prestigious <strong>ACM India Anveshan Setu Fellowship</strong>, among just 50 Ph.D. students
             chosen from across the country. Congratulations Greeshma!
         </li>
         <li>
@@ -226,23 +226,23 @@
             with Prof. Nandyala Hemachandra.
         </li>
         <li>
-            <strong>Paper</strong> titled
+            Paper titled
             <q>Anytime Fairness Guarantees in Stochastic Combinatorial MABs: A Novel Learning Framework</q>
             by Subham Pokhriyal, Shweta Jain, Ganesh Ghalme, and
-            Vaneet Aggarwal has been <strong>accepted as a full paper in AAMAS 2025</strong>.
+            Vaneet Aggarwal has been accepted as a <strong>full paper in AAMAS 2025</strong>.
         </li>
         <li>
-            <strong>Paper</strong> titled
+            Paper titled
             <q>FLIGHT: Facility Location Integrating Generalized, Holistic Theory of Welfare</q>
             by Avyukta Manjunatha Vummintala, Shivam Gupta,
-            Shweta Jain, and Sujit Gujar has been <strong>accepted as a full paper in AAMAS 2025</strong>.
+            Shweta Jain, and Sujit Gujar has been accepted as a <strong>full paper in AAMAS 2025</strong>.
         </li>
         <li>
-            <strong>Paper</strong> titled
+            Paper titled
             <q>Fair Assignment on Multi-Stage Graphs</q>
             by Vibulan J, Swapnil Dhamal, Shweta Jain,
             Ojassvi Kumar, Aman Kumar, and Harpreet Singh
-            has been <strong>accepted as an extended abstract in AAMAS 2025</strong>.
+            has been accepted as an<strong> extended abstract in AAMAS 2025</strong>.
         </li>
     </ul>
 </div>
