--- a/team.html
+++ b/team.html
@@ -276,7 +276,7 @@
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
                         <div class="person text-center extra_profile_space" id="deep-dwivedi">
                             <img src="./images/dp/phd_shardha_sharma.jpeg" alt="Image" style="height: 250px;"
-                                class="img-fluid rounded w-75 ">
+                                class="img-fluid2 rounded w-75 ">
                             <h3><strong>Shradha Sharma </strong></h3>
                             <p class="text-black">Client Selection in Federated Learning</p>
                             <ul class="ul-social-circle">
