--- a/gallery.html
+++ b/gallery.html
@@ -283,7 +283,7 @@ closeBtn.addEventListener('click', () => {
             </div>
             <center>
               <p>
-                  <small>&copy; Copyright ©2023 All rights reserved by GTML Lab</small>
+                  <small>&copy; Copyright @2025 All rights reserved by GTML Lab</small>
               </p>
             </center>
       </div>
