--- a/publication.html
+++ b/publication.html
@@ -230,7 +230,7 @@
             <div class="portfolio-item web-des web-phd">
               <div class="portfolio-wrap">
                 <b>
-                  <font style='color:#000000;'>Satyanath Bhat, Shweta Jain, Sujit Gujar, Yadati Narahari.
+                  <font style='color:#000000;'>Ganesh Ghalme, Swapnil Dhamal, Shweta Jain, Sujit Gujar, Y. Narahari.
                 </b> Ballooning Multi-armed Bandits. Artificial Intelligence, 296, 103485</font>
                 <a target="_blank" class="large-btn"
                   style='background-color: #b31b1b; font-size: 10pt; padding: 2pt; color: white;'
@@ -243,7 +243,7 @@
             <div class="portfolio-item web-des web-phd">
               <div class="portfolio-wrap">
                 <b>
-                  <font style='color:#000000;'>Ganesh Ghalme, Swapnil Dhamal, Shweta Jain, Sujit Gujar, Y. Narahari.
+                  <font style='color:#000000;'>Satyanath Bhat, Shweta Jain, Sujit Gujar, Yadati Narahari.
                 </b> An optimal bidimensional multi-armed bandit auction for multi-unit procurement, Annals of
                 Mathematics and Artificial Intelligence, Volume 85, Issue 1, pp 1-19, 2019.</font>
                 <a target="_blank" class="large-btn"
@@ -777,7 +777,7 @@
         </div>
         <center>
           <p>
-            <small>&copy; Copyright ©2023 All rights reserved by GTML Lab</small>
+            <small>&copy; Copyright @2025 All rights reserved by GTML Lab</small>
           </p>
         </center>
       </div>
