--- a/team.html
+++ b/team.html
@@ -338,7 +338,7 @@
 
                 <div style="margin-top: 80px;">
                                     <div class="row justify-content-center mb-5" <div class="col-md-7 text-center">
-                                        <h2>Past</h2>
+                                        <h2>PhD Alumni</h2>
                                     </div>
                                 </div>
 
@@ -432,6 +432,8 @@
                                 </div>
 
                                 <div class="row">
+
+                                <h3><strong> Open for intake </strong>  </h3>
 
                                     <!-- Add new Mtech student here -->
                                     <!-- <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300"
@@ -574,7 +576,7 @@
                                 <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300"
                                     id="tanya-kapur">
                                     <div class="person text-center extra_profile_space">
-                                        <h3><strong>Utkars Patel</strong></h3>
+                                        <h3><strong>Utkarsh Patel</strong></h3>
                                         </a>
                                         <p class="position text-black">Fair resource allocation</p>
                                         <p class="mb-4" style="text-align:justify;"></p>
@@ -994,7 +996,7 @@
                         </div>
                         <center>
                             <p>
-                                <small>&copy; Copyright ©2023 All rights reserved by GTML Lab</small>
+                                <small>&copy; Copyright ©2025 All rights reserved by GTML Lab</small>
                             </p>
                         </center>
                     </div>
