--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 </div>
                 <center>
                     <p>
-                        <small>&copy; Copyright ©2023 All rights reserved by GTML Lab</small>
+                        <small>&copy; Copyright @2025 All rights reserved by GTML Lab</small>
                     </p>
                 </center>
 
