--- a/gallery.html
+++ b/gallery.html
@@ -231,6 +231,18 @@ closeBtn.addEventListener('click', () => {
         </div>
         <div class="gallery-item">
           <img src="./images/Gallery/gallery_11.jpg"  alt="Image 2">
+        </div>  
+        <div class="gallery-item">
+          <img src="./images/Gallery/gallery_12.jpg"  alt="Image 2">
+        </div>  
+<div class="gallery-item">
+          <img src="./images/Gallery/gallery_13.jpg"  alt="Image 2">
+        </div>  
+        <div class="gallery-item">
+          <img src="./images/Gallery/gallery_14.jpg"  alt="Image 2">
+        </div>  
+
+
 
         
         
