--- a/team.html
+++ b/team.html
@@ -244,7 +244,7 @@
 
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
                         <div class="person text-center extra_profile_space" id="deep-dwivedi">
-                            <img src="./images/dp/phd_napender_singh.jpeg" alt="Image" style="height: 250px;"
+                            <img src="./images/dp/phd_napender_singh_new.jpeg.jpg" alt="Image" style="height: 250px;"
                                 class="img-fluid rounded w-75 ">
                             <h3><strong>Napendra Singh Rajput</strong></h3>
                             <p class="text-black">Computational Social Choice</p>
@@ -261,7 +261,7 @@
 
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
                         <div class="person text-center extra_profile_space" id="deep-dwivedi">
-                            <img src="./images/dp/phd_shubham_phokhriyal_formal1.jpeg" alt="Image"
+                            <img src="./images/dp/phd_subham_new.jpg" alt="Image"
                                 style="height: 250px;" class="img-fluid rounded w-75 ">
                             <h3><strong>Subham Pokhriyal</strong></h3>
                             <p class="text-black">Fairness in Multi-armed Bandits</p>
@@ -275,8 +275,8 @@
 
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
                         <div class="person text-center extra_profile_space" id="deep-dwivedi">
-                            <img src="./images/dp/phd_shardha_sharma.jpeg" alt="Image" style="height: 250px;"
-                                class="img-fluid2 rounded w-75 ">
+                            <img src="./images/dp/shradha_new.jpg" alt="Image" style="height: 250px;"
+                                class="img-fluid2 rounded  ">
                             <h3><strong>Shradha Sharma </strong></h3>
                             <p class="text-black">Client Selection in Federated Learning</p>
                             <ul class="ul-social-circle">
@@ -288,19 +288,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
-                        <div class="person text-center extra_profile_space" id="deep-dwivedi">
-                            <img src="./images/dp/anuj.png" alt="Image" style="height: 250px;"
-                                class="img-fluid rounded w-75 ">
-                            <h3><strong>Anuj Agarwal </strong></h3>
-                            <p class="text-black">TBD</p>
-                            <ul class="ul-social-circle">
-                                <li><a href="https://www.linkedin.com/in/"><span class="icon-linkedin"
-                                            style="font-size:20px"></span></a></li>
-
-                            </ul>
-                        </div>
-                    </div>
+                    
 
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
                         <div class="person text-center extra_profile_space" id="deep-dwivedi">
@@ -328,7 +316,33 @@
                             </ul>
                         </div>
                     </div>
+                    <div class="col-md-6 col-lg-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
+                        <div class="person text-center extra_profile_space" id="deep-dwivedi">
+                            <img src="./images/dp/anuj.png" alt="Image" style="height: 250px;"
+                                class="img-fluid rounded w-75 ">
+                            <h3><strong>Anuj Agarwal </strong></h3>
+                            <p class="text-black">TBD</p>
+                            <ul class="ul-social-circle">
+                                <li><a href="https://www.linkedin.com/in/"><span class="icon-linkedin"
+                                            style="font-size:20px"></span></a></li>
 
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 col-lg-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
+                        <div class="person text-center extra_profile_space" id="deep-dwivedi">
+                            <img src="./images/dp/mudit_sharma.png" alt="Image" style="height: 250px;"
+                                class="img-fluid rounded w-75 ">
+                            <h3><strong>Anuj Agarwal </strong></h3>
+                            <p class="text-black">TBD</p>
+                            <ul class="ul-social-circle">
+                                <li><a href="https://www.linkedin.com/in/mudit-sharma-komu290220/"><span class="icon-linkedin"
+                                            style="font-size:20px"></span></a></li>
+
+                            </ul>
+                        </div>
+                    </div>
 
 
                     
@@ -394,16 +408,16 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-4" data-aos="fade" data-aos-delay="200">
+                            <!-- <div class="col-md-4" data-aos="fade" data-aos-delay="200">
                                 <div class="person text-center extra_profile_space" id="john-doe">
                                     <img src="./images/dp/saumya_sarkar.png" alt="Image" style="height: 250px;"
                                         class="img-fluid rounded w-75 ">
                                     <h3><strong>Saumya Sarkar</strong></h3>
                                     <p class="text-black">Federated Learning</p>
                                 </div>
-                            </div>
+                            </div> -->
 
-                            <div class="col-md-4" data-aos="fade" data-aos-delay="300">
+                            <!-- <div class="col-md-4" data-aos="fade" data-aos-delay="300">
                                 <div class="person text-center extra_profile_space" id="jane-smith">
                                     <img src="./images/dp/mudit_sharma.png" alt="Image" style="height: 250px;"
                                         class="img-fluid rounded w-75 ">
@@ -411,7 +425,7 @@
                                     <p class="text-black">Human in the loop</p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                         <div class="site-section border-bottom" style="margin-top: -50px;">
                         </div>
