--- a/team.html
+++ b/team.html
@@ -334,7 +334,7 @@
                         <div class="person text-center extra_profile_space" id="deep-dwivedi">
                             <img src="./images/dp/mudit_sharma.png" alt="Image" style="height: 250px;"
                                 class="img-fluid rounded w-75 ">
-                            <h3><strong>Anuj Agarwal </strong></h3>
+                            <h3><strong>Mudit Sharma </strong></h3>
                             <p class="text-black">TBD</p>
                             <ul class="ul-social-circle">
                                 <li><a href="https://www.linkedin.com/in/mudit-sharma-komu290220/"><span class="icon-linkedin"
